Adjusted the base.html so that it will have the main.js on there and we can use that for later purposes

--- a/AnswerQuest/templates/AnswerQuest/base.html
+++ b/AnswerQuest/templates/AnswerQuest/base.html
@@ -9,6 +9,7 @@
   <title>{% block title %}AnswerQuest{% endblock %}</title>
   <link rel="stylesheet" href="https://cdn.shoelace.style/1.0.0-beta24/shoelace.css">
   <link rel="stylesheet" href="{% static 'css/styles.css' %}">
+  <script src="{% static 'js/main.js' %}"></script>
 </head>
 <body>
   <div class="container">
