--- a/AnswerQuest/templates/AnswerQuest/question.html
+++ b/AnswerQuest/templates/AnswerQuest/question.html
@@ -20,6 +20,7 @@ Grabbing the Question data:
             <!-- Add author profile link. Something we didn't discuss but seems good to have. Probably easy to implement as we are creating user accounts so might as well have -->
             <a class="question-author">{{ question.author }}</a>
         </div>
+        <button>Add Answer</button>
         {% if question.answers.count %}
         {% for answer in question.answers.all %}
         
@@ -44,6 +45,11 @@ Grabbing the Question data:
             <h2>There are no answers for this question</h2>
         </div>
         {% endif %}
+        <h3>Add an answer here</h3>
+        <form action="" method="POST">
+            <textarea type="text" placeholder="Add a possible answer here. This could be a button that is right below the question. We can brainstorm"></textarea>
+        </form>
+        <!-- Form will go here -->
 
         <!-- Something I noticed is that we need to add the ability to see multiple answers to the same question. 
              Currently only displaying one 
