Adjusted home view.py

--- a/AnswerQuest/templates/AnswerQuest/base.html
+++ b/AnswerQuest/templates/AnswerQuest/base.html
@@ -14,21 +14,23 @@
 <body>
   <div class="container">
     <div class="page-header bg-primary">
-      <h1><a class="text-light" href="/"></a>AnswerQuest</h1>
+      <h1><a class="text-light" href="/">AnswerQuest</a></h1>
     </div>
 
     <div class="navbar">
-        Home
-        Hot
-        Solved
-        Unsolved
-        Newest
-        Most popular
-        Surprise Me
-      
+      <ul>
+        <a>Home</a>
+        <a>Hot</a>
+        <a>Solved</a>
+        <a>Unsolved</a>
+        <a>Newest</a>
+        <a>Most popular</a>
+        <a>Surprise Me</a>
+      </ul>
       </div>
       <div class="upperleft">
         <div>
+          <!-- Adjust to be crumbs  -->
           Avatar/profile/stats
         </div>
       </div>
