--- a/AnswerQuest/static/css/styles.css
+++ b/AnswerQuest/static/css/styles.css
@@ -1,6 +1,11 @@
 .page-header {
-  padding-top: 0.5rem;
-  padding-bottom: 0.5rem;
-  margin-bottom: 0.5rem;
-  padding-left: 0.5rem;
+	padding-top: 0.5rem;
+	padding-bottom: 0.5rem;
+	margin-bottom: 0.5rem;
+	padding-left: 0.5rem;
+}
+
+.vote-container {
+	display: flex;
+	justify-content: space-evenly;
 }
