working links WIP

--- a/AnswerQuest/templates/AnswerQuest/base.html
+++ b/AnswerQuest/templates/AnswerQuest/base.html
@@ -26,6 +26,8 @@
         <a>Newest</a>
         <a>Most popular</a>
         <a>Surprise Me</a>
+        <a href="{% url 'pose_question' %}">Ask</a>
+        <a href="{% url 'question_list' %}">Questions</a>
       </ul>
       </div>
       <div class="upperleft">
