--- a/AnswerQuest/templates/AnswerQuest/pose_question.html
+++ b/AnswerQuest/templates/AnswerQuest/pose_question.html
@@ -4,7 +4,7 @@
 
 <div class='pose-question-container'>
 
-    <a href="{% url 'home_page' %}">Return Home, {{ user }}</a>
+    <a href="{% url 'home' %}">Return Home, {{ user }}</a>
 
     <div class='pose-question-header'>
         <h2>Pose Your Question, Questor!</h2>
