--- a/AnswerQuest/templates/AnswerQuest/question.html
+++ b/AnswerQuest/templates/AnswerQuest/question.html
@@ -15,12 +15,20 @@ Grabbing the Question data:
     <div class="question-container">
         <div class="question-text-container">
             {% if question.is_solved %}SOLVED{% endif %}
+            {% if request.user == author %}
+                <a href="{}">Edit Question</a>
+            {% endif %}
             <p class="question-title">{{ question.title }}</p>
             <p class="question-body">{{ question.body }}</p>
             <!-- Add author profile link. Something we didn't discuss but seems good to have. Probably easy to implement as we are creating user accounts so might as well have -->
             <a class="question-author">{{ question.author }}</a>
         </div>
-        <button>Add Answer</button>
+        <button id="add-answer">Add Answer</button>
+        <form id="answer-form" action="" method="POST">
+            {% csrf_token %}
+            <input type="text">
+            <button type="submit">Submit</button>
+        </form>
         {% if question.answers.count %}
         {% for answer in question.answers.all %}
         
@@ -42,14 +50,18 @@ Grabbing the Question data:
             <h2>There are no answers for this question</h2>
         </div>
         {% endif %}
-        <h3>Add an answer here</h3>
-        <form action="" method="POST">
-            <textarea type="text" placeholder="Add a possible answer here. This could be a button that is right below the question. We can brainstorm"></textarea>
-        </form>
         <!-- Form will go here -->
 
         <!-- Something I noticed is that we need to add the ability to see multiple answers to the same question. 
              Currently only displaying one 
             This impeded me from being able to do the answer form for the page but I think I know how to do it  -->
+            <script>
+            add_answer = document.querySelector('#add-answer')
+            add_answer.addEventListener('click', event => {
+                event.preventDefault()
+                add_answer.style.display = 'none';
+                document.getElementById('answer-form').style.display = 'block';
+            })
+            </script>
     </div>
 {% endblock %}
