--- a/AnswerQuest/templates/AnswerQuest/question.html
+++ b/AnswerQuest/templates/AnswerQuest/question.html
@@ -1,3 +1,4 @@
+{% load static %}
 {% extends 'AnswerQuest/base.html' %}
 <!-- 
 Assumptions made towards the question:
@@ -12,6 +13,8 @@ Grabbing the Question data:
 -->
 
 {% block content %}
+
+<link rel="stylesheet" href="{% static 'question_stylesheet.css' %}
     <div class="question-container">
         <div class="question-text-container">
             {% if question.is_solved %}SOLVED{% endif %}
