Adjusted question for small issues with HTML formatting, deleted base.html outside of our templates, changed url so we don't use user_profile, styled question page for use, and got rid of a data file for testing

--- a/AnswerQuest/static/css/styles.css
+++ b/AnswerQuest/static/css/styles.css
@@ -13,3 +13,16 @@
 #answer-form {
 	display: none;
 }
+
+.question-container,
+#answer-form,
+.answer-container {
+	border: 1px solid black;
+	padding: 1rem;
+	margin: 1rem;
+}
+
+.navbar-list {
+	display: flex;
+	justify-content: space-evenly;
+}
