--- a/AnswerQuest/templates/AnswerQuest/base.html
+++ b/AnswerQuest/templates/AnswerQuest/base.html
@@ -16,19 +16,18 @@
     <div class="page-header bg-primary">
       <h1><a class="text-light" href="/">AnswerQuest</a></h1>
     </div>
-
-    <div class="navbar">
-      <ul>
-        <a href="{% url 'home' %}">Home</a>
-        <a>Hot</a>
-        <a>Solved</a>
-        <a>Unsolved</a>
-        <a>Newest</a>
-        <a>Most popular</a>
-        <a>Surprise Me</a>
-        <a href="{% url 'pose_question' %}">Ask</a>
-        <a href="{% url 'question_list' %}">Questions</a>
-      </ul>
+      <div class="navbar">
+        <ul class="navbar-list">
+          <a href="{% url 'home' %}">Home</a>
+          <a>Hot</a>
+          <a>Solved</a>
+          <a>Unsolved</a>
+          <a>Newest</a>
+          <a>Most popular</a>
+          <a>Surprise Me</a>
+          <a href="{% url 'pose_question' %}">Ask</a>
+          <a href="{% url 'question_list' %}">Questions</a>
+        </ul>
       </div>
       <div class="upperleft">
         <div>
