markdown working, added questions and answers to profile, sign up and login

--- a/AnswerQuest/templates/AnswerQuest/profile.html
+++ b/AnswerQuest/templates/AnswerQuest/profile.html
@@ -18,10 +18,15 @@
   </div>
   <div>
     Questions
+    {{ user.quests.all }}
   </div>
-    {{ user.starred.all }}
   <div>
     Answers
+    {{ user.responses.all }}
+  </div>
+  <div>
+    Starred
+    {{ user.starred.all }}
   </div>
 
 
