--- a/AnswerQuest/templates/AnswerQuest/base.html
+++ b/AnswerQuest/templates/AnswerQuest/base.html
@@ -28,6 +28,8 @@
         <a>Surprise Me</a>
         <a href="{% url 'pose_question' %}">Ask</a>
         <a href="{% url 'question_list' %}">Questions</a>
+        <a href='accounts/login'>Sign In</a>
+        <a href='accounts/register'>Register</a>
       </ul>
       </div>
       <div class="upperleft">
