Added the ability to delete and favorite questions.

--- a/AnswerQuest/templates/AnswerQuest/profile.html
+++ b/AnswerQuest/templates/AnswerQuest/profile.html
@@ -19,7 +19,8 @@
   <div>
     Questions
   </div>
-    {{ user.starred.all }}
+
+    {{ user.starred_questions.all }}
   <div>
     Answers
   </div>
