--- a/AnswerQuest/static/css/styles.css
+++ b/AnswerQuest/static/css/styles.css
@@ -3,6 +3,7 @@
 	padding-bottom: 0.5rem;
 	margin-bottom: 0.5rem;
 	padding-left: 0.5rem;
+	border-radius: 10px;
 }
 
 .vote-container {
@@ -12,4 +13,29 @@
 
 #answer-form {
 	display: none;
+}
+
+.navbar {
+	background-color: #65b5f1;
+	border-radius: 10px;
+}
+
+.question-container {
+	background-color: lightblue;
+	border-radius: 20px;
+	padding: 1rem;	
+}
+
+.answer-container {
+	margin: 1rem;
+	display: flex;	
+	justify-content: left;
+}
+
+.pose-question-header {
+	padding: 1rem;
+}
+
+button {
+	margin: 10px;
 }
