answers can be starred and unstarred

--- a/AnswerQuest/templates/AnswerQuest/profile.html
+++ b/AnswerQuest/templates/AnswerQuest/profile.html
@@ -27,14 +27,15 @@
     Questions
     {{ user.quests.all }}
   </div>
+    Starred Questions
     {{ user.starred_questions.all }}
   <div>
     Answers
     {{ user.responses.all }}
   </div>
   <div>
-    Starred
-    {{ user.starred.all }}
+    Starred Answers
+    {{ user.starred_answers.all }}
   </div>
 
 
