--- a/AnswerQuest/templates/AnswerQuest/question.html
+++ b/AnswerQuest/templates/AnswerQuest/question.html
@@ -32,36 +32,101 @@
     </form>
     <!-- Creation of our Answers for our Question -->
     {% if question.answers.count %}
-    {% for answer in question.answers.all %}
-    <div class="answer-container">
-        <!-- <button data-answer-pk="{{ answer.pk }}" class="answer-favorite">Favorite</button> -->
-        {% if request.user == question.author and answer.is_correct == False %}
-        <button data-answerpk="{{ answer.pk }}" data-type="answer" class="correct-answer">Correct Answer?</button>
-        <p class="first-correct-mark">Correct!</p>
+
+        {% if question.is_solved %}
+
+            {% for answer in question.answers.all %}
+
+                {% if answer.is_correct %}
+
+                    <div class="answer-container">
+                            <!-- <button data-answer-pk="{{ answer.pk }}" class="answer-favorite">Favorite</button> -->
+
+                        <p class="marked-correct">Correct!</p>
+
+                        <a data-answerpk="{{ answer.pk }}" data-type="answer"
+                        class="answer-favorite">{% if answer in request.user.starred_answers.all %}&#9733{% else %}&#9734{% endif %}</a>
+
+                        <div class="answer-text-container">
+                            <p>{{ answer.body }}</p>
+                            <a>{{ answer.author }}</a>
+                        </div>
+
+                        <div class="vote-container">
+                            <p class="upvote">Upvote {{answer.upvotes}}</p>
+                            <!-- This will be where the Upvote icon goes -->
+                            <p class="downvote">Downvote {{answer.downvotes}}</p>
+                            <!-- This will be where the Downvote icon goes -->
+                        </div>
+                    </div>
+
+                {% else %}
+
+                    <div class="answer-container">
+                            <!-- <button data-answer-pk="{{ answer.pk }}" class="answer-favorite">Favorite</button> -->
+
+                        <a data-answerpk="{{ answer.pk }}" data-type="answer"
+                        class="answer-favorite">{% if answer in request.user.starred_answers.all %}&#9733{% else %}&#9734{% endif %}</a>
+                        
+                        <div class="answer-text-container">
+                            <p>{{ answer.body }}</p>
+                            <a>{{ answer.author }}</a>
+                        </div>
+
+                        <div class="vote-container">
+                            <p class="upvote">Upvote {{answer.upvotes}}</p>
+                            <!-- This will be where the Upvote icon goes -->
+                            <p class="downvote">Downvote {{answer.downvotes}}</p>
+                            <!-- This will be where the Downvote icon goes -->
+                        </div>
+                    </div>
+
+                {% endif %}
+
+            {% endfor %}
+        
+        {% else %}
+        
+            {% for answer in question.answers.all %}
+                
+            <div class="answer-container">
+                    <!-- <button data-answer-pk="{{ answer.pk }}" class="answer-favorite">Favorite</button> -->
+                    {% if request.user == question.author %}
+                        
+                        <button data-answerpk="{{ answer.pk }}" data-type="answer" class="correct-answer">Correct Answer?</button>
+
+                        <p class="first-correct-mark">Correct!</p>
+                        
+                    {% endif %}
+
+                    {% if answer.is_correct == True %}
+                        <p class="first-correct-mark">Correct!</p>
+                    {% endif %}
+
+                        <a data-answerpk="{{ answer.pk }}" data-type="answer"
+                            class="answer-favorite">{% if answer in request.user.starred_answers.all %}&#9733{% else %}&#9734{% endif %}</a>
+                        <div class="answer-text-container">
+                            <p>{{ answer.body }}</p>
+                            <a>{{ answer.author }}</a>
+                        </div>
+                        <div class="vote-container">
+                            <p class="upvote">Upvote {{answer.upvotes}}</p>
+                            <!-- This will be where the Upvote icon goes -->
+                            <p class="downvote">Downvote {{answer.downvotes}}</p>
+                            <!-- This will be where the Downvote icon goes -->
+                        </div>
+                </div>
+
+            {% endfor %}
+
         {% endif %}
 
-        {% if answer.is_correct == True %}
-        <p class="marked-correct">Correct!</p>
-        {% endif %}
-
-        <a data-answerpk="{{ answer.pk }}" data-type="answer"
-            class="answer-favorite">{% if answer in request.user.starred_answers.all %}&#9733{% else %}&#9734{% endif %}</a>
-        <div class="answer-text-container">
-            <p>{{ answer.body }}</p>
-            <a>{{ answer.author }}</a>
-        </div>
-        <div class="vote-container">
-            <p class="upvote">Upvote {{answer.upvotes}}</p>
-            <!-- This will be where the Upvote icon goes -->
-            <p class="downvote">Downvote {{answer.downvotes}}</p>
-            <!-- This will be where the Downvote icon goes -->
-        </div>
-    </div>
-    {% endfor %}
     {% else %}
-    <div class="answer-container">
-        <h2>There are no answers for this question</h2>
-    </div>
+
+            <div class="answer-container">
+                <h2>There are no answers for this question</h2>
+            </div>
+            
     {% endif %}
 
     <!-- Something I noticed is that we need to add the ability to see multiple answers to the same question. 
@@ -118,8 +183,10 @@
                 })
                 correct_button.parentElement.querySelector('.correct-answer').style.display = 'none'
                 correct_button.parentElement.querySelector('.first-correct-mark').style.display = 'inline-block'
+
             })
         }
+
 
 // need to change all non-correct answer buttons to display: none
 
