--- a/AnswerQuest/templates/AnswerQuest/base.html
+++ b/AnswerQuest/templates/AnswerQuest/base.html
@@ -31,11 +31,11 @@
           <a href='accounts/login'>Sign In</a>
           <a href='accounts/register'>Register</a>
         </ul>
-
       </div>
-      <div class="upperleft">
+
+      <!-- <div class="upperleft">
         <div>
-          <!-- Adjust to be crumbs  -->
+          Adjust to be crumbs 
           {% if user.avatar %}
           <figure>
             <img src="{{ user.avatar.url }}" alt ="{{ user.name }}">
@@ -47,15 +47,16 @@
           {% endif %}
           <a href="{% url 'profile' %}">Avatar/profile/stats</a>
         </div>
-      </div>
+      </div> -->
       
-      <div class="upper_right">
+      <!-- <div class="upper_right">
         <div>
           AnswerQuest Leaderboard
         </div>
-    {% block content %}
-    {%endblock %}
-  </div>
+      </div> -->
+
+      {% block content %}
+      {%endblock %}
   
 </body>
 </html>
