Added styling that I'm not crazy about

--- a/AnswerQuest/static/css/styles.css
+++ b/AnswerQuest/static/css/styles.css
@@ -1,3 +1,18 @@
+body {
+	font-weight: 15px;
+	margin: 0 auto;
+}
+
+.personal-info-highlights {
+	display: flex;
+	justify-content: start;
+}
+
+.avatar {
+	width: 175px;
+	height: 200px;
+}
+
 .page-header {
 	padding-top: 0.5rem;
 	padding-bottom: 0.5rem;
@@ -21,8 +36,8 @@
 	border: 1px solid black;
 	padding: 1rem;
 	margin: 1rem;
-  background-color: lightblue;
-  border-radius: 20px;
+	background-color: lightblue;
+	border-radius: 20px;
 }
 
 .navbar-list {
@@ -37,7 +52,7 @@
 
 .answer-container {
 	margin: 1rem;
-	display: flex;	
+	display: flex;
 	justify-content: left;
 }
 
@@ -47,4 +62,55 @@
 
 button {
 	margin: 10px;
+}
+/* HOME PAGE ADJUSTMENTS */
+
+.browse {
+	display: flex;
+	flex-direction: row;
+	flex-wrap: wrap;
+	width: 1000px;
+	margin: 0 auto;
+}
+
+.here-you-are {
+	margin-top: 1rem;
+	margin-left: 3rem;
+}
+
+.question-box {
+	margin: 2rem;
+	background-color: #e9e9e9;
+	box-shadow: 8px 14px 8px #d3dadf;
+	width: 100%;
+	border-radius: 10px;
+}
+
+a .question-box:hover {
+	transform: scale(1.2);
+}
+
+.question-favorite {
+	text-decoration: none;
+}
+
+.question-favorite:link {
+	text-decoration: none;
+}
+
+.question-favorite:hover {
+	transform: scale(1.2);
+	cursor: pointer;
+}
+
+.question {
+	text-transform: capitalize;
+	border-bottom: 1px solid grey;
+	padding: 0;
+	margin: 1rem 2rem 0.5rem 2rem;
+}
+
+.question-info-container {
+	display: flex;
+	justify-content: space-around;
 }
