--- a/AnswerQuest/templates/AnswerQuest/base.html
+++ b/AnswerQuest/templates/AnswerQuest/base.html
@@ -9,7 +9,7 @@
   <title>{% block title %}AnswerQuest{% endblock %}</title>
   <link rel="stylesheet" href="https://cdn.shoelace.style/1.0.0-beta24/shoelace.css">
   <link rel="stylesheet" href="{% static 'css/styles.css' %}">
-  <script src="{% static 'js/main.js' %}"></script>
+  <script src="{% static 'js/main.js' %}" defer></script>
 </head>
 <body>
   <div class="container">
@@ -19,7 +19,6 @@
 
       <div class="navbar">
         <ul class="navbar-list">
-          <a href="{% url 'home' %}">Home</a>
           <a>Hot</a>
           <a>Solved</a>
           <a>Unsolved</a>
@@ -33,26 +32,29 @@
         </ul>
 
       </div>
-      <div class="upperleft">
-        <div>
-          <!-- Adjust to be crumbs  -->
-          {% if user.avatar %}
-          <figure>
-            <img src="{{ user.avatar.url }}" alt ="{{ user.name }}">
-          </figure>
-          {% else %}
-          <figure>
-            <img src="{%static 'img/placeholder.jpg' %}" alt ="Set an avatar image! ">
-          </figure>
-          {% endif %}
-          <a href="{% url 'profile' %}">Avatar/profile/stats</a>
+      <div class="personal-info-highlights">
+        <div class="upperleft">
+          <div>
+            <!-- Adjust to be crumbs  -->
+            {% if user.avatar %}
+            <figure>
+              <img class="avatar" src="{{ user.avatar.url }}" alt ="{{ user.name }}">
+            </figure>
+            {% else %}
+            <figure>
+              <img src="{%static 'img/placeholder.jpg' %}" alt ="Set an avatar image! ">
+            </figure>
+            {% endif %}
+            <a href="{% url 'profile' %}">Avatar/profile/stats</a>
+          </div>
+        </div>
+        
+        <div class="upper_right">
+          <div>
+            AnswerQuest Leaderboard
+          </div>
         </div>
       </div>
-      
-      <div class="upper_right">
-        <div>
-          AnswerQuest Leaderboard
-        </div>
     {% block content %}
     {%endblock %}
   </div>
