changed things around on profile and nav bar

--- a/AnswerQuest/templates/AnswerQuest/base.html
+++ b/AnswerQuest/templates/AnswerQuest/base.html
@@ -20,12 +20,13 @@
       <div class="navbar">
         <ul class="navbar-list">
           <a href="{% url 'home' %}">Home</a>
-          <a>Hot</a>
+          <!-- <a>Hot</a>
           <a>Solved</a>
           <a>Unsolved</a>
           <a>Newest</a>
           <a>Most popular</a>
-          <a>Surprise Me</a>
+          <a>Surprise Me</a> -->
+          <a href="{% url 'profile' %}">My Profile</a>
           <a href="{% url 'pose_question' %}">Ask</a>
           <a href="{% url 'question_list' %}">Questions</a>
           <a href='accounts/login'>Sign In</a>
