--- a/AnswerQuest/templates/AnswerQuest/home.html
+++ b/AnswerQuest/templates/AnswerQuest/home.html
@@ -7,7 +7,7 @@
 </div>
 
 <div class="body">
-  <div>
+  <!-- <div>
     Hot in last 24 hrs
   </div>
   <div>
@@ -24,7 +24,7 @@
   </div>
   <div>
     ? Surprise me(random)
-  </div>
+  </div> -->
 </div>
 
 {{ questions }}
