--- a/AnswerQuest/templates/AnswerQuest/profile.html
+++ b/AnswerQuest/templates/AnswerQuest/profile.html
@@ -11,7 +11,7 @@
     <button class="button" type='submit'>Update profile</button>
   </div>
   </form>
-  <div>
+  <!-- <div>
     Avatar
   </div>
   <div>
@@ -22,7 +22,7 @@
   </div>
   <div>
     Email 
-  </div>
+  </div> -->
   <div>
     Questions
     {{ user.quests.all }}
