--- a/AnswerQuest/templates/AnswerQuest/base.html
+++ b/AnswerQuest/templates/AnswerQuest/base.html
@@ -64,7 +64,7 @@
         <div>
           AnswerQuest Leaderboard
         </div>
-      </div>
+      </div> --->
     {% block content %}
     {%endblock %}
   </div>
